Added auth and admin pages and updated styles

--- a/src/components/CategoryColumn.astro
+++ b/src/components/CategoryColumn.astro
@@ -26,6 +26,8 @@ const { label, list } = Astro.props;
   }
 
   .category-label {
+    margin-top: 1.5em;
+    font-size: 1.25em;
     font-weight: bold;
     text-decoration: none;
     color: inherit;
