--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,7 +12,7 @@
       Oops! It looks like you've stumbled upon a research paper that hasn't been
       published yet (or ever).
     </p>
-    <a href="/home" class="button">Go to Homepage</a>
+    <a href="/" class="button">Go to Homepage</a>
     <img
       src="https://images.unsplash.com/photo-1579373903781-fd40536d7fd1?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=800&h=600&fit=crop"
       alt="Lost in space"
@@ -55,5 +55,6 @@
       }
     }
   </style>
+
 
 </html>
