--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,8 +4,8 @@
 :root {
   --primary-color: #3f51b5; /* Indigo */
   --primary-color-dark: #334399; /* Darkened Indigo for hover */
-  --accent-color: #ff4081; /* Pink */
-  --accent-color-dark: #cc3368; /* Darkened Pink for hover */
+  --accent-color: #4a40ff; /* Pink */
+  --accent-color-dark: #4d33cc; /* Darkened Pink for hover */
   --text-color: #333;
   --background-color: #f9f9f9;
   --card-background: #fff;
